# server

./: .env.example  .gitignore  COMMERCIAL_LICENSE.md  Cargo.toml  Dockerfile  README.md  compose.prod.yml  compose.yml
.github/workflows/: ci.yml  docker.yml
migrations/: 001_create_users.sql  002_create_sync_blobs.sql  003_create_teams.sql  004_create_terminal_sessions.sql  005_public_terminal_sessions.sql  006_terminal_session_multi_vault.sql  007_team_vault_sync.sql  008_custom_roles.sql  009_backfill_trial_tier.sql  010_admin_ban_fields.sql  011_feature_flags.sql  012_admin_audit_log.sql  013_churn_events.sql  014_admin_override.sql  015_public_key_nullable.sql  016_pending_invitations.sql  017_roles_refactor.sql  018_trial_fingerprints.sql  019_audit_logs.sql  020_subscription_lifecycle_fields.sql  021_team_vault_objects.sql  022_pending_invite_user_id.sql  023_email_verification.sql  024_user_kek_dek.sql  025_user_display_name.sql  026_team_user_object_prefs.sql  027_perm_edit_snippets.sql  028_user_soft_delete.sql  029_mobile_waitlist.sql
src/: db.rs  email.rs  lemonsqueezy.rs  license.rs  main.rs  permissions.rs  rate_limit.rs  self_host.rs  sync_notifier.rs  terminal_manager.rs  test_support.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/models/: mod.rs  sync_blob.rs  team.rs  user.rs
src/routes/: admin.rs  audit.rs  auth.rs  billing.rs  invitations.rs  meta.rs  mod.rs  presence.rs  sync.rs  team_object_prefs.rs  team_objects.rs  team_sync.rs  teams.rs  terminal.rs  waitlist.rs  webhooks.rs
(+2 files in other folders)
